Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -264,7 +264,7 @@ list-style-type: square;
   float: right;
   position: relative;
   background-color: transparent;
-  max-width: 690px;
+  width: 70%;
 }
 
 .widget.extendednavigation a.pull {
@@ -272,7 +272,6 @@ list-style-type: square;
 }
 
 .widget.extendednavigation ul {
-  float: left;
   padding: 0;
   margin: 32px 0 0;
   background-color: @color-swatch1;
